Przetłumaczenie na język angielski

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parallax-plugin",
   "version": "1.0.0",
-  "description": "Lekka wtyczka do efektu parallax dla elementów .parallax",
+  "description": "Lightweight parallax effect plugin for .parallax elements",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
