--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-parallax",
+  "name": "@maxsoft/super-parallax",
   "version": "1.0.0",
   "description": "Lightweight parallax effect plugin for .parallax elements",
   "main": "index.js",
